[package]
name = "qifi-rs"
version = "0.3.0"
authors = [ "yutiansut <yutian@quantaxis.com.cn>"]
edition = "2018"
description = "A fast Api and Structure load"
readme = "README.md"
keywords = ["actix", "http", "web", "framework", "async"]
homepage = "https://github.com/yutiansut"
repository = "https://github.com/yutiansut/qifi-rs"
documentation = "https://docs.rs/qifi-rs/"
categories = ["science", "algorithms"]
license = "MIT OR Apache-2.0"

include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
bson = "1.1.0"
serde_json = "1.0.60"
serde_derive = "1.0.118"
serde = { version = "1.0.118", features = ["derive"] } # 序列化

serde_bytes = "0.10"

[profile.release]
lto = "fat"

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["sync"]
[[example]]
name = "mongodbtest"

[[example]]
name = "single_test"
