[package]
name = "qifi-rs"
version = "0.3.0"
authors = ["somewheve <somewheve@gmail.com>", "yutiansut <yutian@quantaxis.com.cn>"]
edition = "2021"
description = "A fast Api and Structure load"

[dependencies]
bson = "2.14.0"
serde_json = "*"
serde_derive = "1.0.219"
serde = { version = "1.0.219", features = ["derive"] } # 序列化
mongodb = "3.2.3"
serde_bytes = "0.11.17"

[profile.release]
lto = "fat"


[[example]]
name = "mongodbtest"

[[example]]
name = "single_test"
